# Automatic-Price-Tracking

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: price_history.db-shm  price_history.db-wal
src/: ai_search_service.py  ai_service.py  check_prices.py  config.py  db.py  notifications.py  scraper.py
src/site_scrapers/: __init__.py  search.py
src/tests/: test_check_prices.py  test_notification.py  test_scraper.py
