[tool.poetry]
name = "universal-price-tracker"
version = "1.0.0"
description = "Track e-commerce prices across any site and get Discord alerts on drops"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.0.0"
crawlee = {extras = ["playwright"], version = "^0.5.0"}
playwright = "^1.40.0"
playwright-stealth = "^1.0.6"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]

[tool.poetry.scripts]
check-prices = "src.check_prices:check_prices"
